--- a/src/pages/speakers-page.html
+++ b/src/pages/speakers-page.html
@@ -153,7 +153,7 @@
 
     <polymer-helmet
       title="{$ heroSettings.speakers.title $} | {$ title $}"
-      description="112{$ heroSettings.speakers.metaDescription $}"
+      description="{$ heroSettings.speakers.metaDescription $}"
       active="[[_setHelmetData(active, isSpeakerDialogOpened, isSessionDialogOpened)]]"
     ></polymer-helmet>
 
