--- a/src/elements/header-toolbar.html
+++ b/src/elements/header-toolbar.html
@@ -44,7 +44,8 @@
         height: 32px;
         background-color: var(--default-primary-color);
         transition: background-color var(--animation);
-        -webkit-mask: url('/images/logo-monochrome.svg') no-repeat;
+        -webkit-mask: url('/images/logo.png') no-repeat;
+        -webkit-mask-size: contain;
       }
 
       .nav-items {
@@ -154,7 +155,7 @@
 
         <paper-tab class="signin-tab" on-tap="signIn" link hidden$="[[user.signedIn]]">{$ signIn $}</paper-tab>
 
-        <a href$="[[_getTicketUrl(tickets)]]" target="_blank" rel="noopener noreferrer" ga-on="click"
+        <a href="https://www.eventbrite.com/e/devfest-2018-sofia-tickets-50222983295" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="ticket button" ga-event-action="buy_click">
           <paper-button class="buy-button" primary>{$ buyTicket $}</paper-button>
         </a>
