--- a/src/pages/speakers-page.html
+++ b/src/pages/speakers-page.html
@@ -39,6 +39,7 @@
         background: var(--primary-background-color);
         text-align: center;
         transition: box-shadow var(--animation);
+        max-height: 500px;
       }
 
       .speaker:hover {
@@ -260,8 +261,6 @@
         </a>
       </template>
     </div>
-
-    <previous-speakers-block></previous-speakers-block>
 
     <footer-block></footer-block>
 
