--- a/src/pages/speakers-page.html
+++ b/src/pages/speakers-page.html
@@ -37,6 +37,7 @@
         background: var(--primary-background-color);
         text-align: center;
         transition: box-shadow var(--animation);
+        max-height: 500px;
       }
 
       .speaker:hover {
@@ -246,8 +247,6 @@
         </a>
       </template>
     </div>
-
-    <previous-speakers-block></previous-speakers-block>
 
     <footer-block></footer-block>
 
