--- a/src/elements/header-toolbar.html
+++ b/src/elements/header-toolbar.html
@@ -157,7 +157,7 @@
 
         <a href="https://www.eventbrite.com/e/devfest-2018-sofia-tickets-50222983295" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="ticket button" ga-event-action="buy_click">
-          <paper-button class="buy-button" primary>{$ buyTicket $}</paper-button>
+<!--          <paper-button class="buy-button" primary>{$ buyTicket $}</paper-button>-->
         </a>
       </paper-tabs>
 
