--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -142,11 +142,11 @@
             <iron-icon icon="hoverboard:movie"></iron-icon>
             {$ viewHighlights $}
           </paper-button>
-          <a href="https://www.eventbrite.com/e/devfest-2018-sofia-tickets-50222983295" target="blank"><paper-button
+          <a href="/" target="blank"><paper-button
             primary invert
           >
             <iron-icon icon="hoverboard:ticket"></iron-icon>
-            {$ buyTicket $}
+            {$ ticketsBlock.comingSoon $}
           </paper-button></a>
         </div>
 
