Update website statements

--- a/src/elements/footer-nav.html
+++ b/src/elements/footer-nav.html
@@ -21,6 +21,10 @@
         display: block;
       }
 
+      .terms-and-services {
+        display: block;
+      }
+
       .nav-inline {
         list-style: none;
         margin: 0;
@@ -62,6 +66,10 @@
         .cod {
           display: inline-flex;
         }
+
+        .terms-and-services {
+          display: inline-flex;
+        }
       }
     </style>
 
@@ -78,10 +86,10 @@
       </a>
 
       <div class="copyright">
-        &copy; [[_getYear()]] Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project
-        Hoverboard</a> &middot; <a class="cod" href="/cod">{$ codeOfConduct
-        $}</a>
-
+        &copy; [[_getYear()]] Based on
+        <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project Hoverboard</a>
+        &middot; <a class="cod" href="/cod">{$ codeOfConduct $}</a>
+        &middot; <a class="terms-and-services" href="/terms-and-services">{$ termsAndServices $}</a>
       </div>
     </div>
 
