--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -231,6 +231,18 @@
             data-route="cod"
             data-path="pages/cod-page.html"
           ></cod-page>
+          <terms-and-services-page
+            data-route="terms-and-services"
+            data-path="pages/terms-and-services-page.html"
+          ></terms-and-services-page>
+          <privacy-page
+            data-route="privacy"
+            data-path="pages/privacy-page.html"
+          ></privacy-page>
+          <cookies-page
+            data-route="cookies"
+            data-path="pages/cookies-page.html"
+          ></cookies-page>
         </iron-lazy-pages>
 
       </app-header-layout>
