Change logos, descriptions and links

--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -71,13 +71,13 @@
         <div>
           <h1 class="container-title">About GDG DevFest 2019 Sofia</h1>
           <h2>Conference:</h2>
-          <p>GDG DevFest Sofia brings together the world class experts in Android, Web and Cloud technologies to Sofia, Bulgaria a day full of sessions. The largest Google tech conference worldwide is organized and brought to Bulgaria by GDG Sofia & Women Techmakers, TechHuddle, DataArt & Qualifast Ltd.</p>
+          <p>GDG DevFests are community-led, developer events hosted by GDG chapters around the globe focused on community building and learning about Google’s technologies. Each DevFest is inspired by and uniquely tailored to the needs of the developer community and region that hosts it. While no two DevFests will be exactly alike, each at its core is powered by a shared belief that when developers come together to exchange ideas, amazing things can happen. After bringing together over 300 participants with 14 outstanding speakers from all over the world, we couldn’t wait to organize the second DevFest Sofia this year.</p>
 
           <h2>Workshops:</h2>
-          <p>Curious to develop Chatbots? Interested in Google Assistant programming? Join our hands-on workshop led by the best Bulgarian IT academies.</p>
+          <p>Curious to develop Chatbots? Interested in Google Assistant programming? What about Kotlin and Flutter as well? Learn more about all of them by joining our hands-on workshops happening throughout the conference day.</p>
 
-          <h2>Socializing:</h2>
-          <p>Join the afterparty with free drinks & entertainment! Relax after the sessions, win some prizes at the raffle, and socialize with peers from the developer community.</p>
+          <h2>Networking:</h2>
+          <p>Join the afterparty with free drinks & a lot of entertainment! Relax between and after the sessions in the designated areas, win some prizes at the raffle and socialize with peers from our Bulgarian and international developers’ communities.</p>
 
           <a
             href="https://www.youtube.com/user/GoogleDevelopers"
@@ -108,14 +108,19 @@
           </div>
 
           <div class="item">
-            <div class="numbers">{$ aboutBlock.statisticsBlock.sessions.number $}</div>
-            <div class="label">{$ aboutBlock.statisticsBlock.sessions.label $}</div>
+            <div class="numbers">{$ aboutBlock.statisticsBlock.tracks.number $}</div>
+            <div class="label">{$ aboutBlock.statisticsBlock.tracks.label $}</div>
           </div>
 
           <div class="item">
-            <div class="numbers">{$ aboutBlock.statisticsBlock.tracks.number $}</div>
-            <div class="label">{$ aboutBlock.statisticsBlock.tracks.label $}</div>
+            <div class="numbers">{$ aboutBlock.statisticsBlock.speakers.number $}</div>
+            <div class="label">{$ aboutBlock.statisticsBlock.speakers.label $}</div>
+          </div>
 
+          <div class="item">
+            <div class="numbers">{$ aboutBlock.statisticsBlock.workshops.number $}</div>
+            <div class="label">{$ aboutBlock.statisticsBlock.workshops.label $}</div>
+          </div>
         </div>
       </div>
     </div>
