--- a/src/elements/footer-nav.html
+++ b/src/elements/footer-nav.html
@@ -33,8 +33,8 @@
 
       .footer-logo {
         margin: 10px 30px 0 0;
-        height: 24px;
-        width: 120px;
+        height: 48px;
+        width: 130px;
         float: left;
       }
 
@@ -78,7 +78,7 @@
       <a href="{$ organizer.url $}" target="_blank" rel="noopener noreferrer">
         <plastic-image
           class="footer-logo"
-          srcset="../../images/logos/GDG-Sofia.png"
+          srcset="https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/partners%2Fgdg-sofia-logo.png?alt=media&token=ab85a4a1-3906-41ae-beef-25eb0b191ed9"
           sizing="contain"
           alt="{$ organizer.name $}"
           lazy-load
