Add tracks info

--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -71,13 +71,37 @@
         <div>
           <h1 class="container-title">About GDG DevFest 2019 Sofia</h1>
           <h2>Conference:</h2>
-          <p>GDG DevFests are community-led, developer events hosted by GDG chapters around the globe focused on community building and learning about Google’s technologies. Each DevFest is inspired by and uniquely tailored to the needs of the developer community and region that hosts it. While no two DevFests will be exactly alike, each at its core is powered by a shared belief that when developers come together to exchange ideas, amazing things can happen. After bringing together over 300 participants with 14 outstanding speakers from all over the world, we couldn’t wait to organize the second DevFest Sofia this year.</p>
+          <p>GDG DevFests are community-led, developer events hosted by GDG chapters around the globe focused on
+            community building and learning about Google’s technologies. Each DevFest is inspired by and uniquely
+            tailored to the needs of the developer community and region that hosts it. While no two DevFests will be
+            exactly alike, each at its core is powered by a shared belief that when developers come together to exchange
+            ideas, amazing things can happen. After bringing together over 300 participants with 14 outstanding speakers
+            from all over the world, we couldn’t wait to organize the second DevFest Sofia this year.</p>
+
+          <h2>Tracks:</h2>
+          <strong>Mobile</strong>
+          <p>
+            Developers with affinity to mobile solutions will find plenty of intriguing topics. Android, Kotlin, Flutter
+            and Firebase will all be targeted. With the big mobile developer community in Bulgaria, we are bound to
+            learn a lot of new and exciting things in this track!
+          </p>
+
+          <strong>Cloud & Web</strong>
+          <p>
+            This diverse stream will cover many trendy topics from Angular, Google Cloud to TensorFlow and Google
+            Assistant as well as the various APIs Google provides to us all. The exact topics will be set in the course
+            of time, but whatever comes, we are bound to enjoy and expand our knowledge horizons.
+          </p>
 
           <h2>Workshops:</h2>
-          <p>Curious to develop Chatbots? Interested in Google Assistant programming? What about Kotlin and Flutter as well? Learn more about all of them by joining our hands-on workshops happening throughout the conference day.</p>
+          <p>Curious to develop Chatbots? Interested in Google Assistant programming? What about Kotlin and Flutter as
+            well? Learn more about all of them by joining our hands-on workshops happening throughout the conference
+            day.</p>
 
           <h2>Networking:</h2>
-          <p>Join the afterparty with free drinks & a lot of entertainment! Relax between and after the sessions in the designated areas, win some prizes at the raffle and socialize with peers from our Bulgarian and international developers’ communities.</p>
+          <p>Join the afterparty with free drinks & a lot of entertainment! Relax between and after the sessions in the
+            designated areas, win some prizes at the raffle and socialize with peers from our Bulgarian and
+            international developers’ communities.</p>
 
           <a
             href="https://www.youtube.com/user/GoogleDevelopers"
