Enabling the buy tickets

--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -74,7 +74,8 @@
             tailored to the needs of the developer community and region that hosts it. While no two DevFests will be
             exactly alike, each at its core is powered by a shared belief that when developers come together to exchange
             ideas, amazing things can happen. After bringing together over 300 participants with 14 outstanding speakers
-            from all over the world, we couldn’t wait to organize the second DevFest Sofia this year.</p>
+            from all over the world in 2018, we couldn’t wait to organize the second DevFest Sofia this year. Further,
+	    this year our event was chosen to be part of the global Kotlin/Everywhere map.</p>
 
           <h2>Tracks:</h2>
           <strong>Mobile</strong>
@@ -92,9 +93,9 @@
           </p>
 
           <h2>Workshops:</h2>
-          <p>Curious to develop Chatbots? Interested in Google Assistant programming? What about Kotlin and Flutter as
-            well? Learn more about all of them by joining our hands-on workshops happening throughout the conference
-            day.</p>
+          <p>Do you want to get hands on experience with the latest from Flutter and Kotlin? Do you want to learn about
+	    the Angular tricks world renown experts use? Get all that  by joining our hands-on workshops happening
+	    throughout the conference day.</p>
 
           <h2>Networking:</h2>
           <p>Join the afterparty with free drinks & a lot of entertainment! Relax between and after the sessions in the
