--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -140,11 +140,11 @@
             <iron-icon icon="hoverboard:movie"></iron-icon>
             {$ viewHighlights $}
           </paper-button>
-          <a href="/" target="blank"><paper-button
+          <a href="https://event.gg/13150/" target="blank"><paper-button
             primary invert
           >
             <iron-icon icon="hoverboard:ticket"></iron-icon>
-            {$ ticketsBlock.comingSoon $}
+            {$ ticketsBlock.buyTicket $}
           </paper-button></a>
         </div>
 
