--- a/src/elements/header-toolbar.html
+++ b/src/elements/header-toolbar.html
@@ -152,7 +152,7 @@
 
         <paper-tab class="signin-tab" on-tap="signIn" link hidden$="[[user.signedIn]]">{$ signIn $}</paper-tab>
 
-        <a href="https://event.gg/13150/" target="_blank" rel="noopener noreferrer" ga-on="click"
+        <a href$="[[_getTicketUrl(tickets)]]" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="ticket button" ga-event-action="buy_click">
           <paper-button class="buy-button" primary>{$ buyTicket $}</paper-button>
         </a>
