--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -218,9 +218,11 @@
 
       .tag {
         margin-right: 2px;
+        margin-bottom: 2px;
         padding: 2px 4px;
         font-size: 12px;
         border: 1px solid currentColor;
+        display: inline-block;
       }
 
       @media (min-width: 640px) {
