--- a/src/elements/session-element.html
+++ b/src/elements/session-element.html
@@ -82,7 +82,7 @@
       }
 
       .session-meta {
-        margin: 0;
+        margin-right: 10px;
         padding: 0;
         font-size: 12px;
         color: var(--secondary-text-color);
