Add pixel, add tickets page

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -32,6 +32,7 @@
 <link rel="import" href="elements/hero-block.html">
 <link rel="import" href="elements/footer-block.html">
 <link rel="import" href="elements/hoverboard-analytics.html">
+<link rel="import" href="elements/hoverboard-facebook-pixel.html">
 <link rel="import" href="effects/transparent-scroll.html">
 
 
@@ -221,6 +222,10 @@
             data-route="team"
             data-path="pages/team-page.html"
           ></team-page>
+          <tickets-page
+            data-route="tickets"
+            data-path="pages/tickets-page.html"
+          ></tickets-page>
           <faq-page
             data-route="faq"
             data-path="pages/faq-page.html"
