--- a/src/elements/hero-block.html
+++ b/src/elements/hero-block.html
@@ -14,7 +14,7 @@
       }
 
       .hero-block {
-        height: 100%;
+        height: calc(100vh + 1px);
         position: relative;
         color: inherit;
       }
