Fix lint issues

--- a/src/elements/hoverboard-facebook-pixel.html
+++ b/src/elements/hoverboard-facebook-pixel.html
@@ -1,5 +1,6 @@
 <!-- Facebook Pixel Code -->
 <script>
+  /* eslint-disable */
   !function (f, b, e, v, n, t, s) {
     if (f.fbq) return;
     n = f.fbq = function () {
