Fix tickets page on Prod

--- a/src/elements/hero-block.html
+++ b/src/elements/hero-block.html
@@ -14,7 +14,7 @@
       }
 
       .hero-block {
-        height: calc(100vh + 1px);
+        height: 100%;
         position: relative;
         color: inherit;
       }
