--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -25,6 +25,7 @@
       hero-block {
         font-size: 24px;
         text-align: center;
+        height: calc(100vh + 1px);
       }
       .hero-logo {
         --iron-image-width: 100%;
