--- a/src/elements/session-element.html
+++ b/src/elements/session-element.html
@@ -65,7 +65,7 @@
         min-height: 70px;
       }
 
-      .bookmark-session {
+      .bookmark-session, .feedback-action {
         color: var(--secondary-text-color);
       }
 
@@ -73,7 +73,7 @@
         color: var(--default-primary-color);
       }
 
-      .bookmark-session:hover {
+      .bookmark-session:hover, .feedback-action:hover {
         color: var(--default-primary-color);
       }
 
@@ -170,11 +170,21 @@
         <div class="session-meta">
           <div hidden$="[[!session.complexity]]">[[session.complexity]]</div>
         </div>
-        <iron-icon
-          class="bookmark-session"
-          icon="hoverboard:[[_getFeaturedSessionIcon(featuredSessions, session.id)]]"
-          on-tap="_toggleFeaturedSession"
-        ></iron-icon>
+
+        <div class="session-actions">
+          <iron-icon
+            class="feedback-action"
+            hidden="[[!_acceptingFeedback()]]"
+            icon="hoverboard:insert-comment"
+            on-tap="_toggleFeedback"
+          ></iron-icon>
+          <iron-icon
+            class="bookmark-session"
+            hidden="[[_acceptingFeedback()]]"
+            icon="hoverboard:[[_getFeaturedSessionIcon(featuredSessions, session.id)]]"
+            on-tap="_toggleFeaturedSession"
+          ></iron-icon>
+        </div>
       </div>
 
       <div class="session-footer">
@@ -285,6 +295,22 @@
         });
 
         this.dispatch(sessionsActions.setUserFeaturedSessions(this.user.uid, sessions));
+      }
+
+      _toggleFeedback(event) {
+        event.preventDefault();
+        event.stopPropagation();
+        dialogsActions.openDialog(DIALOGS.FEEDBACK, this.session);
+      }
+
+      _acceptingFeedback() {
+        const now = new Date();
+        const convertedTimezoneDate = new Date(
+            new Date(`${this.session.day} ${this.session.startTime}`).getTime() +
+          (parseInt('{$ timezoneOffset $}') - now.getTimezoneOffset()) * 60000
+        );
+        const diff = now - convertedTimezoneDate;
+        return diff > 0 && diff < 172800000; // 48 hours time window.
       }
     }
 
